# rust-esp32-std-demo

./: Cargo.toml  partitions.csv  sdkconfig.defaults  version-data.txt
.github/actions/esp-build/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.yml
src/: main.rs
